# learnOpenGl

./: CMakeLists.txt  NOTE.md  README.md  main.cpp
include/glad/: glad.h
lib/: glfw3.lib
resources/shaders/: hello_texture2.fs
src/: glad.c
src/ch01/: helloShader.cpp  helloShader.h  helloShader2.cpp  helloShader2.h  helloTexture.cpp  helloTexture.h  helloTexture2.cpp  helloTexture2.h  helloTransform.cpp  helloTransform.h  helloTriangle.cpp  helloTriangle.h  helloWindow.cpp  helloWindow.h
src/utils/: shader.cpp  shader.h
